tests/type-errors/specasset_unknown_field.arl
archetype specasset_unknown_field

asset my_asset identified by id {
  id : string;
  n : nat;
} initialized by {
  {"id0"; 0};
  {"id1"; 1};
  {"id2"; 2}
}

entry exec () {
  ()
}

specification asset my_asset { a1 : bad_field >= 1 }
